--- a/platform.html
+++ b/platform.html
@@ -139,11 +139,11 @@
                         <div class="work col-xs-4 soft ">
                             <div class="platform-inner">
                                 <div class="platform-img">
-                                    <a href="#"><img src="images/platform/unstart.jpg" alt="" /> </a>
+                                    <a href="http://www.w3school.com.cn/index.html"><img src="images/platform/W3school.jpg" alt="" /> </a>
                                 </div>
                                 <div class="platform-desc">
-                                    <h4>Platform Name</h4>
-                                    <p>平台将在稍后开放</p>
+                                    <h4>W3shool</h4>
+                                    <p>在w3school可以找到所有网站建设教程</p>
                                 </div>
                             </div>
                         </div>
