link to issues for discuss

--- a/about.html
+++ b/about.html
@@ -90,13 +90,13 @@
 				<div class="bubble_outer_two">
 					<div class="bubble_container">
 						<div class="bubble"></div>
-						<a><i class="fa fa-rmb"></i></a>
+						<a href="https://github.com/Vanyoung/JNU_IS-SE_officialwebsite/issues" target="_blank"><i class="fa fa-group"></i></a>
 					</div>
 				</div>
 				<div class="about_line"></div>
 				<article class='about_article'>
-					<h2>资瓷</h2>
-					<p>支付宝就好</p>
+					<h2>讨论</h2>
+					<p>在这里发表你的见解与评论</p>
 				</article>
 			</div>
 			
